--- a/profile.html
+++ b/profile.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Your name- Portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header>
-        <img src="image/mypic.jpg" width="220px" height="220px">
-        <h1>Your Name</h1>
+        <img src="image/mypic.jpg" width="380px" height="380px">
+        <h1>Muhammad Abu Sayed</h1>
         <p>Web Developer | Designer | Tech Enthusiast</p>
     </header>
     <section id="bio">
